--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="Archer Gu" />
+    <meta name="author" content="Joseph Deng" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="alternate" type="application/rss+xml" title="Joseph's Blog" href="/feed.xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
